--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 text-decoration: none;
+color: var(--bold-text-color);
 }
 .menu__link:hover,.menu__link:focus{
     color: var(--active-color);
