--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@ body{
     --bold-text-color:#212121;
     --grey-text-color:#757575;
 }
-
+ul li {
+  list-style: none;
+}
 
 .header {
 }
@@ -48,6 +50,9 @@ text-decoration: none;
 color: var(--bold-text-color);
 }
 .menu__link:hover,.menu__link:focus{
+    color: var(--active-color);
+}
+.menu__link.active{
     color: var(--active-color);
 }
 .header__contacts {
@@ -91,6 +96,8 @@ font-size: 16px;
 line-height: 1.87;
 text-align: center;
 letter-spacing: 0.06em;
+background-color: var(--active-color);
+color: white;
 }
 .peculiarities {
 }
@@ -131,6 +138,7 @@ letter-spacing: 0.03em;
 .occupation__item {
 }
 .team {
+    background-color: #F5F4FA;
 
 }
 .team__title {
@@ -147,6 +155,7 @@ letter-spacing: 0.03em;
 .card-team {
 }
 .card-team__item {
+    
 }
 .card-team__title {
 font-style: normal;
@@ -154,9 +163,10 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.19;
 letter-spacing: 0.03em;
-
+text-align: center;
 }
 .card-team__text {
+ text-align: center;
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
@@ -221,6 +231,10 @@ font-size: 16px;
 line-height: 1.62;
 text-align: center;
 letter-spacing: 0.03em;
+}
+.filter__item button:hover {
+    background-color: var(--active-color);
+    color: white;
 }
 .filter__item.active button {
 font-style: normal;
