--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ ul li {
 .header__logo {
 }
 .logo {
-font-family: Raleway;
+font-family: Raleway,sans-serif;
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
