--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ ul li {
 .header {
 }
 .header__logo {
+    color: black;
 }
 .logo {
 font-family: Raleway,sans-serif;
@@ -25,7 +26,6 @@ font-weight: bold;
 font-size: 26px;
 line-height: 1.19;
 letter-spacing: 0.03em;
-color: black;
 text-decoration: none;
 
 }
@@ -98,6 +98,9 @@ text-align: center;
 letter-spacing: 0.06em;
 background-color: var(--active-color);
 color: white;
+}
+.order__button:hover{
+background-color: #188CE8;
 }
 .peculiarities {
 }
@@ -178,6 +181,8 @@ color: var(--grey-text-color);
    background-color:#2F303A ;
 }
 .footer__logo {
+    
+color: white;
 }
 .footer__address {
 
@@ -231,6 +236,7 @@ font-size: 16px;
 line-height: 1.62;
 text-align: center;
 letter-spacing: 0.03em;
+background-color: #F5F4FA;
 }
 .filter__item button:hover {
     background-color: var(--active-color);
