--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,47 @@ body{
     --bold-text-color:#212121;
     --grey-text-color:#757575;
 }
+/* ==================================Обнуление=============================== */
+* {
+  border: 0;
+}
+p{
+    margin: 0;
+    padding: 0;
+}
 ul li {
   list-style: none;
+  margin: 0;
+    padding: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: inherit;
+  margin: 0;
+    padding: 0;
 }
 
+/* ==================================</Обнуление>=============================== */
+.container{
+    max-width: 1200px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+
+
 .header {
+}
+.header__container{
+    display: flex;
+    align-items: center;
+    height:80px ;
+
 }
 .header__logo {
     color: black;
@@ -33,11 +69,23 @@ text-decoration: none;
     color: var(--active-color);
 }
 .header__menu {
+    display: flex;
+    flex:1 1 auto ;
 }
 .menu {
 }
 .menu__list {
+display: flex;
+flex-wrap: wrap;
 }
+.menu__list li  {
+    margin-right:50px ;
+}
+.menu__list li:last-child  {
+    margin-right:0px ;
+}
+
+
 .menu__item {
 }
 .menu__link {
@@ -55,11 +103,18 @@ color: var(--bold-text-color);
 .menu__link.active{
     color: var(--active-color);
 }
+
 .header__contacts {
+    display: flex;
+
 }
 .contacts-header {
 }
 .contacts-header__item {
+   margin-right: 50px;
+}
+.contacts-header__item:last-child{
+    margin-right: 0px;
 }
 .contacts-header__link {
 font-style: normal;
@@ -77,6 +132,16 @@ text-decoration: none;
     background-color:#2F303A ;
     text-align: center;
 }
+.order__container{
+    max-width: 1600px;
+    height: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .order__title {
 font-style: normal;
 font-weight: 900;
@@ -86,7 +151,7 @@ text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color: white;
-
+margin-bottom: 40px;
 }
 .order__button {
 cursor: pointer;
@@ -98,6 +163,9 @@ text-align: center;
 letter-spacing: 0.06em;
 background-color: var(--active-color);
 color: white;
+width: 200px;
+height: 50px;
+border-radius: 5px;
 }
 .order__button:hover{
 background-color: #188CE8;
