--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,14 @@ p{
     margin: 0;
     padding: 0;
 }
+ul{
+    margin: 0;
+    padding: 0;
+}
 ul li {
   list-style: none;
   margin: 0;
-    padding: 0;
+padding: 0;
 }
 h1,
 h2,
@@ -41,7 +45,9 @@ h6 {
     padding: 0 15px;
     margin: 0 auto;
 }
-
+.section{
+    padding: 94px 0;
+}
 
 
 .header {
@@ -54,6 +60,7 @@ h6 {
 }
 .header__logo {
     color: black;
+    margin-right: 93px;
 }
 .logo {
 font-family: Raleway,sans-serif;
@@ -133,8 +140,8 @@ text-decoration: none;
     text-align: center;
 }
 .order__container{
-    max-width: 1600px;
-    height: 600px;
+    width: 100%;
+    height: 412px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -173,9 +180,17 @@ background-color: #188CE8;
 .peculiarities {
 }
 .peculiarities__list {
+    display: flex;
+
 }
 .peculiarities__item {
+    flex: 0 0 270px;
+    margin-right: 30px;
 }
+.peculiarities__item:last-child {
+    margin-right: 0px;
+}
+
 .item-peculiarities {
 }
 .item-peculiarities__title {
@@ -185,6 +200,7 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+margin-bottom: 10px;
 }
 .item-peculiarities__text {
 font-style: normal;
@@ -203,10 +219,16 @@ font-size: 36px;
 line-height: 1.17;
 text-align: center;
 letter-spacing: 0.03em;
+margin-bottom: 50px;
 }
 .occupation__list {
+    display: flex;
 }
 .occupation__item {
+margin-right: 30px;
+}
+.occupation__item:last-child {
+margin-right: 0px;
 }
 .team {
     background-color: #F5F4FA;
@@ -219,14 +241,24 @@ font-size: 36px;
 line-height: 1.17;
 text-align: center;
 letter-spacing: 0.03em;
+margin-bottom: 50px;
 }
 .team__cards {
+display: flex;
 
 }
+
 .card-team {
 }
 .card-team__item {
-    
+    margin-right: 30px;
+    background-color: #fff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+}
+.card-team__item:last-child {
+    margin-right: 0px;
 }
 .card-team__title {
 font-style: normal;
@@ -235,6 +267,7 @@ font-size: 16px;
 line-height: 1.19;
 letter-spacing: 0.03em;
 text-align: center;
+padding: 30px 0 10px 0;
 }
 .card-team__text {
  text-align: center;
@@ -248,12 +281,22 @@ color: var(--grey-text-color);
 .footer {
    background-color:#2F303A ;
 }
-.footer__logo {
+.footer__container{
+    height: 252px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     
+}
+.footer__logo {
 color: white;
+margin-bottom: 20px;
 }
 .footer__address {
 
+}
+.footer__street{
+margin-bottom: 9px;
 }
 .footer__address p {
 font-style: normal;
@@ -268,6 +311,10 @@ color: white;
 .contacts-footer {
 }
 .contacts-footer__item {
+    margin-bottom: 9px;
+}
+.contacts-footer__item:last-child {
+    margin-bottom: 0;
 }
 .contacts-footer__link{
 font-style: normal;
