--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ h6 {
 
 
 .header {
+    border-bottom: 1px solid #ECECEC;
 }
 .header__container{
     display: flex;
@@ -282,6 +283,7 @@ font-size: 16px;
 line-height: 1.19;
 letter-spacing: 0.03em;
 color: var(--grey-text-color);
+margin-bottom: 30px;
 }
 .footer {
    background-color:#2F303A ;
