--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@ h6 {
   margin: 0;
     padding: 0;
 }
-
+img{
+    display: block;
+}
 /* ==================================</Обнуление>=============================== */
 .container{
     max-width: 1200px;
@@ -56,7 +58,6 @@ h6 {
 .header__container{
     display: flex;
     align-items: center;
-    height:80px ;
 
 }
 .header__logo {
@@ -88,6 +89,7 @@ flex-wrap: wrap;
 }
 .menu__list li  {
     margin-right:50px ;
+    
 }
 .menu__list li:last-child  {
     margin-right:0px ;
@@ -97,6 +99,8 @@ flex-wrap: wrap;
 .menu__item {
 }
 .menu__link {
+display: block;
+padding: 32px 0;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
@@ -139,14 +143,12 @@ text-decoration: none;
 .order {
     background-color:#2F303A ;
     text-align: center;
+    padding: 200px 0;
 }
+
 .order__container{
-    width: 100%;
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+   
+
 }
 
 .order__title {
@@ -184,7 +186,7 @@ background-color: #188CE8;
 
 }
 .peculiarities__item {
-    flex: 0 0 270px;
+    width: 270px;
     margin-right: 30px;
 }
 .peculiarities__item:last-child {
@@ -229,16 +231,16 @@ margin-bottom: 50px;
 }
 .occupation__item {
 margin-right: 30px;
+width: 370px;
 }
+
 .occupation__item:last-child {
 margin-right: 0px;
 }
-.team {
-    background-color: #F5F4FA;
 
-}
 .team__section{
-    padding: 0 0 94px 0;
+    padding: 94px 0;
+    background-color: #F5F4FA;
 }
 .team__title {
 font-style: normal;
@@ -257,6 +259,7 @@ display: flex;
 .card-team {
 }
 .card-team__item {
+    width: 270px;
     margin-right: 30px;
     background-color: #fff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -266,6 +269,9 @@ display: flex;
 .card-team__item:last-child {
     margin-right: 0px;
 }
+.card-team__content{
+    margin: 30px 59px;
+}
 .card-team__title {
 font-style: normal;
 font-weight: 500;
@@ -273,38 +279,33 @@ font-size: 16px;
 line-height: 1.19;
 letter-spacing: 0.03em;
 text-align: center;
-padding: 30px 0 10px 0;
+margin-bottom:10px ;
 }
 .card-team__text {
- text-align: center;
+text-align: center;
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
 line-height: 1.19;
 letter-spacing: 0.03em;
 color: var(--grey-text-color);
-margin-bottom: 30px;
 }
 .footer {
    background-color:#2F303A ;
 }
 .footer__container{
-    height: 252px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  padding: 60px;
     
 }
 .footer__logo {
+display: block;
 color: white;
 margin-bottom: 20px;
 }
-.footer__address {
-
-}
-.footer__street{
+.footer__address p{
 margin-bottom: 9px;
 }
+
 .footer__address p {
 font-style: normal;
 font-weight: normal;
@@ -344,13 +345,12 @@ text-decoration: none;
 }
 .portfolio__filter {
 }
-.filter {
-    margin-bottom: 50px;
-}
+
 .filter__list {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 }
 .filter__item {
     margin-right: 8px;
@@ -386,20 +386,25 @@ background-color: var(--active-color);
 .portfolio__cards {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: -30px;
 }
 .portfolio__card {
     margin-bottom: 30px;
-    margin-right: 27px;
+    margin-right: 30px;
+    width: 370px;
 }
 
 
 .portfolio__card:nth-child(3n+3) {
-
     margin-right: 0px;
 }
 
 
-.card-portfolio {
+.card-portfolio__content {
+border-bottom: 1px solid #EEEEEE;
+border-right: 1px solid #EEEEEE;
+border-left: 1px solid #EEEEEE;
+padding: 20px 24px;
 
 }
 
@@ -415,10 +420,8 @@ font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;
 color: var(--bold-text-color);
-margin: -4px 0 0px 0;
-padding: 24px 0 0 24px;
-border-left: 1px solid #EEEEEE;
-border-right: 1px solid #EEEEEE;
+margin-bottom: 4px;
+
 }
 .card-portfolio__text {
 font-style: normal;
@@ -427,9 +430,6 @@ font-size: 16px;
 line-height: 1.87;
 letter-spacing: 0.03em;
 color: var(--grey-text-color);
-padding: 0 0 20px 24px;
-border-left: 1px solid #EEEEEE;
-border-right: 1px solid #EEEEEE;
-border-bottom: 1px solid #EEEEEE;
+
 
 }
