--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ display: flex;
     margin-right: 0px;
 }
 .card-team__content{
-    margin: 30px 59px;
+    padding: 30px 50px;
 }
 .card-team__title {
 font-style: normal;
@@ -292,9 +292,10 @@ color: var(--grey-text-color);
 }
 .footer {
    background-color:#2F303A ;
+   padding: 60px 0;
 }
 .footer__container{
-  padding: 60px;
+
     
 }
 .footer__logo {
