--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,9 @@ background-color: var(--active-color);
     margin-right: 30px;
     width: 370px;
 }
+.portfolio__card:hover,.portfolio__card:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
 
 .portfolio__card:nth-child(3n+3) {
