--- a/css/style.css
+++ b/css/style.css
@@ -149,11 +149,11 @@ padding: 0 0 0 10px;
 }
 
 .order {
-
     background-image: linear-gradient( rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../img/bg-1.jpg');
     background-position:center ;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 1600px;
+    /* background-size: cover; */
     text-align: center;
     padding: 200px 0;
     
@@ -173,7 +173,7 @@ text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color: white;
-margin-bottom: 40px;
+margin-bottom: 30px;
 }
 .order__button {
 cursor: pointer;
