--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body{
 /* ==================================Обнуление=============================== */
 * {
   border: 0;
+  
 }
 p{
     margin: 0;
@@ -150,13 +151,11 @@ padding: 0 0 0 10px;
 
 .order {
     background-image: linear-gradient( rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../img/bg-1.jpg');
-    background-position:center ;
     background-repeat: no-repeat;
-    background-size: 1600px;
-    /* background-size: cover; */
+    max-width: 1600px;
     text-align: center;
     padding: 200px 0;
-    
+    margin: 0 auto;
 }
 
 
@@ -209,10 +208,12 @@ background-color: #188CE8;
 .item-peculiarities {
 }
 .item-peculiarities__image{
+    height: 120px;
     text-align: center;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 30px;
-    padding: 25px 100px;
     background-color: #F5F4FA;
 }
 .item-peculiarities__title {
@@ -289,8 +290,7 @@ display: flex;
     margin-right: 0px;
 }
 .card-team__content{
-    padding: 30px 50px 0 50px;
-    margin-bottom: 16px;
+    padding: 30px 50px 20px 50px;
     
 }
 .card-team__title {
@@ -303,6 +303,7 @@ text-align: center;
 margin-bottom:10px ;
 }
 .card-team__text {
+margin:0 0 14px 0;
 text-align: center;
 font-style: normal;
 font-weight: normal;
@@ -311,24 +312,27 @@ line-height: 1.19;
 letter-spacing: 0.03em;
 color: var(--grey-text-color);
 }
-.card-team__icons{
-    min-height: 44px;
+.card-team__links{
+    width: 44px;
+    height: 44px;
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
+    align-items: center;
     fill: #AFB1B8;
-    
+}
+.card-team__icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
  .card-team__icons li{
-    width: 44px;
-    padding: 11px 0 0 12px;
     margin-right: 10px;
 } 
  .card-team__icons li:last-child{
     margin: 0;
 } 
 
-.card-team__icons li:hover,.card-team__icons li:focus{
+.card-team__links:hover,.card-team__links:focus{
     fill: white;
     background-color: var(--active-color);
     width: 44px;
@@ -336,8 +340,13 @@ color: var(--grey-text-color);
     border-radius: 50%;
 
 }
-.clients__title{
-
+.clients__links{
+fill: #AFB1B8;
+width: 170px;
+height: 92px;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 .clients__list{
 display: flex;
@@ -348,14 +357,13 @@ text-align: center;
 width: 170px;
 border: 1px solid #AFB1B8;
 border-radius: 5px;
-padding: 16px 32px;
 margin-right: 30px;
-fill: #AFB1B8;
+
 }
 .clients__list li:last-child{
     margin-right: 0;
 }
-.clients__list li:hover,.clients__list li:focus{
+.clients__links:hover,.clients__links:focus{
 fill: var(--active-color);
 border: 1px solid var(--active-color);
 
@@ -366,7 +374,7 @@ border: 1px solid var(--active-color);
 }
 .footer__container{
 display: flex;
-    
+align-items: baseline;
 }
 .footer__column{
 margin-right: 70px;
@@ -386,23 +394,25 @@ text-transform: uppercase;
 color: #fff;
 }
 .footer__icons{
-    min-height: 44px;
     display: flex;
-    justify-content: center;
-    fill: white;
-    margin-bottom: 30px;
 }
- .footer__icons li{
-    width: 44px;
-    padding: 11px 0 0 12px;
-    margin-right: 10px;
-    background-color: #43444d;
+.footer__links{
     width: 44px;
     height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: white;
+
+}
+ .footer__icons li{
+    margin-right: 10px;
     border-radius: 50%;
+    background-color: #43444d;
+
 } 
 
-.footer__icons li:hover,.footer__icons li:focus{
+.footer__links:hover,.footer__links:focus{
     fill: white;
     background-color: var(--active-color);
     width: 44px;
@@ -506,10 +516,6 @@ background-color: var(--active-color);
     margin-right: 30px;
     width: 370px;
 }
-.portfolio__card:hover,.portfolio__card:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 
 .portfolio__card:nth-child(3n+3) {
     margin-right: 0px;
@@ -525,8 +531,11 @@ padding: 20px 24px;
 }
 
 .card-portfolio__link {
+display: inline-block;
 text-decoration: none;
-
+}
+.card-portfolio__link:hover,.card-portfolio__link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .card-portfolio__title {
  display: block;
