--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ flex-wrap: wrap;
 .menu__item {
 }
 .menu__link {
+position: relative;
 display: block;
 padding: 32px 0;
 font-style: normal;
@@ -109,6 +110,7 @@ line-height: 1.14;
 letter-spacing: 0.02em;
 text-decoration: none;
 color: var(--bold-text-color);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu__link:hover,.menu__link:focus{
     color: var(--active-color);
@@ -116,6 +118,18 @@ color: var(--bold-text-color);
 .menu__link.active{
     color: var(--active-color);
 }
+.menu__link.active::after{
+    content: "";
+    display: block;
+    position: absolute;
+    top: 76px;
+    background: var(--active-color);
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+}
+
+
 
 .header__contacts {
     display: flex;
@@ -140,6 +154,7 @@ line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--grey-text-color);
 fill: #757575;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-header__link span{
 padding: 0 0 0 10px;
@@ -187,6 +202,7 @@ color: white;
 width: 200px;
 height: 50px;
 border-radius: 5px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order__button:hover{
 background-color: #188CE8;
@@ -313,12 +329,14 @@ letter-spacing: 0.03em;
 color: var(--grey-text-color);
 }
 .card-team__links{
+    border-radius: 50%;
     width: 44px;
     height: 44px;
     display: flex;
     justify-content: center;
     align-items: center;
     fill: #AFB1B8;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-team__icons{
     display: flex;
@@ -335,10 +353,6 @@ color: var(--grey-text-color);
 .card-team__links:hover,.card-team__links:focus{
     fill: white;
     background-color: var(--active-color);
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-
 }
 .clients__links{
 fill: #AFB1B8;
@@ -349,6 +363,7 @@ justify-content: center;
 align-items: center;
 border: 1px solid #AFB1B8;
 border-radius: 5px;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients__list{
 display: flex;
@@ -357,7 +372,6 @@ text-align: center;
 }
 .clients__list li{
 width: 170px;
-
 margin-right: 30px;
 
 }
@@ -367,8 +381,6 @@ margin-right: 30px;
 .clients__links:hover,.clients__links:focus{
 fill: var(--active-color);
 border: 1px solid var(--active-color);
-border-radius: 5px;
-
 }
 .footer {
    background-color:#2F303A ;
@@ -405,7 +417,8 @@ color: #fff;
     justify-content: center;
     align-items: center;
     fill: white;
-
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  .footer__icons li{
     margin-right: 10px;
@@ -420,10 +433,6 @@ margin:0;
 .footer__links:hover,.footer__links:focus{
     fill: white;
     background-color: var(--active-color);
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-
 }
 .footer__logo {
 display: block;
@@ -460,6 +469,7 @@ line-height: 1.7;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 text-decoration: none;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-footer__link:hover,.contacts-footer__link:focus{
     color: var(--active-color);
@@ -498,6 +508,7 @@ letter-spacing: 0.03em;
 background-color: #F5F4FA;
  border-radius: 4px;
 padding: 6px 22px;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),color 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter__item button:hover {
     background-color: var(--active-color);
@@ -534,14 +545,41 @@ border-left: 1px solid #EEEEEE;
 padding: 20px 24px;
 
 }
-
+.card-portfolio__image{
+    position: relative;
+    overflow: hidden;
+}
+.card-portfolio__hover{
+    position: absolute;
+    background-color: rgba(33, 150, 243, 0.9);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translate(0,100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-portfolio__hover p{  
+padding: 63px 24px;
+font-size: 18px;
+line-height: 28px;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+}
 .card-portfolio__link {
 display: inline-block;
 text-decoration: none;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.card-portfolio__link:hover .card-portfolio__hover,.card-portfolio__link:focus .card-portfolio__hover{
+    transform: translate(0,0%);
+}
+
 .card-portfolio__link:hover,.card-portfolio__link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+
 .card-portfolio__title {
  display: block;
 font-style: normal;
