--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,9 @@ img{
 .section{
     padding: 94px 0;
 }
-
+body{
+    position: relative;
+}
 
 .header {
     border-bottom: 1px solid #ECECEC;
@@ -474,8 +476,56 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .contacts-footer__link:hover,.contacts-footer__link:focus{
     color: var(--active-color);
 }
+/*===================Backdrop=====================*/
+.backdrop {
+position: fixed;
+background-color: rgba(0, 0, 0, 0.2);
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+.backdrop__modal{
+position: absolute;
+width: 528px;
+height: 581px;
+background-color: #fff;
+top: 50%;
+left: 50%;
+transform:  scale(1) translate(-50%,-50%);
+transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+transform-origin: 0 -100%;
+}
+.backdrop__close{
+cursor: pointer;
+position: absolute;
+top: 8px;
+right: 8px;
+border: 1px solid rgba(0, 0, 0, 0.1);
+border-radius: 50%;
+width: 30px;
+height: 30px;
+}
+.backdrop__close svg{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 11px;
+    height: 11px;
+    fill: #000;
+}
 
+.is-hidden{
+    opacity: 0;
+    visibility: hidden ;
+    pointer-events: none;
+    
+}
+.is-hidden .backdrop__modal{
+    transform: scale(0);
 
+}
 /* ================Portfolio============================== */
 
 .portfolio {
