--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
+
 }
 .backdrop__modal{
 position: absolute;
@@ -572,7 +573,7 @@ background-color: #fff;
 top: 50%;
 left: 50%;
 transform:  scale(1) translate(-50%,-50%);
-transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) , opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) , visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
 transform-origin: 0 -100%;
 }
 .backdrop__close{
@@ -599,7 +600,7 @@ height: 30px;
     opacity: 0;
     visibility: hidden ;
     pointer-events: none;
-    
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) , opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) , visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden .backdrop__modal{
     transform: scale(0);
