--- a/css/style.css
+++ b/css/style.css
@@ -586,6 +586,9 @@ border-radius: 50%;
 width: 30px;
 height: 30px;
 }
+.backdrop__close:hover svg{
+    fill: var(--active-color);
+}
 .backdrop__close svg{
     position: absolute;
     top: 50%;
@@ -593,7 +596,8 @@ height: 30px;
     transform: translate(-50%,-50%);
     width: 11px;
     height: 11px;
-    fill: #000;
+    fill: #212121;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden{
@@ -627,12 +631,11 @@ margin-bottom: 12px;
 .modal__list {
 }
 .modal__item {
+    display: inline-block;
     position: relative;
     margin-bottom: 10px;
 }
-.modal__item:last-child{
-    margin-bottom: 0;
-}
+
 .modal__lable {
 font-size: 12px;
 line-height: 14px;
@@ -643,35 +646,122 @@ margin-bottom: 4px;
 .modal__input {
     width: 448px;
     height: 40px;
-    padding: 12px 0 12px 42px;
+    padding: 12px 12px 12px 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    outline: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal__icon {
+.modal__input:focus {
+    border: 1px solid #2196F3;
+}
+
+.modal__icon{
+    fill: #212121;
     position: absolute;
     top: 50%;
     left: 3%;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal__icon svg {
-    fill: #212121;
+.modal__input:focus~.modal__icon{
+    fill:#2196F3;
 }
 .modal__comment {
 }
 .comment {
+    margin-bottom: 20px;
 }
 .comment__label {
+display: block;
+font-size: 12px;
+line-height: 14px;
+letter-spacing: 0.01em;
+color: #757575;
+margin-bottom: 4px;
 }
 .comment__input {
+    padding:12px 16px;
+    min-width: 448px;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline: none;
+}
+.comment__input:focus {
+    border: 1px solid #2196F3;
 }
 .modal__agreement {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .modal__checkbox {
+position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.modal__checkbox:checked + .checkbox__icon {
+  border-color: transparent;
+  background-color: var(--active-color);
+  background-image: url(../img/check.svg);
+  background-size: contain;
+  background-origin: border-box;
+  background-repeat: no-repeat;
 }
 .checkbox__icon {
+display: inline-block;
+width: 16px;
+height: 15px;
+margin-right: 5px;
+border: 2px solid #212121;
+border-radius: 3px;
+cursor: pointer;
+transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
-.modal__link {
+.modal__link{
+font-size: 14px;
+line-height: 24px;
+letter-spacing: 0.03em;
+text-decoration-line: underline;
+color: #2196F3;
+}
+.modal__text{
+font-size: 14px;
+line-height: 24px;
+letter-spacing: 0.03em;
+color: #757575;
+}
+.modal__send{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .modal__button {
+    padding: 10px 55px;
+cursor: pointer;
+background-color: var(--active-color);
+font-weight: bold;
+font-size: 16px;
+line-height: 30px;
+display: flex;
+align-items: center;
+justify-content: center;
+letter-spacing: 0.06em;
+color: #FFFFFF;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__button:hover,.modal__button:focus {
+background-color: #188CE8;
 }
 /* ================Portfolio============================== */
 
