--- a/css/style.css
+++ b/css/style.css
@@ -586,6 +586,7 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 border-radius: 50%;
 width: 30px;
 height: 30px;
+background-color: #fff;
 }
 .backdrop__close:hover svg{
     fill: var(--active-color);
