--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,5 @@
 :root{
+    --main-font:Roboto,sans-serif;
     --active-color:#2196F3;
     --bold-text-color:#212121;
     --grey-text-color:#757575;
