--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ body {
   font-family: var(--main-font);
   color: var(--bold-text-color);
   position: relative;
+  overflow: hidden;
 }
 
 .wrapper {
@@ -103,6 +104,7 @@ body {
 
 .header {
   border-bottom: 1px solid #ECECEC;
+  position: relative;
 }
 
 .header__container {
@@ -133,10 +135,87 @@ body {
   }
 }
 
+@media (max-width: 768px) {
+  .menu__body {
+    position: fixed;
+    padding: 40px;
+    top: -120%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    transition: all 0.3s ease 0s;
+    z-index: 7;
+    overflow: auto;
+  }
+  .menu__body.is-open {
+    top: 0%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.menu__contacts {
+  margin-bottom: 64px;
+}
+
+.menu__contacts li {
+  margin: 0 0 30px 0;
+}
+
+.menu__contacts li:last-child {
+  margin: 0;
+}
+
+.menu__contacts li a {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: var(--grey-text-color);
+}
+
+.menu__contacts li a span {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: var(--active-color);
+}
+
 @media (min-width: 768px) {
   .menu__contacts {
     display: none;
   }
+}
+
+.menu__socials {
+  display: flex;
+  align-items: center;
+}
+
+.menu__socials li {
+  display: inline-block;
+  margin: 0 10px 0 0;
+}
+
+.menu__socials li a {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: var(--active-color);
+}
+
+.menu__socials li:not(:last-child):after {
+  content: '';
+  width: 22px;
+  height: 0px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  margin: 0 0 0 10px;
 }
 
 @media (min-width: 768px) {
@@ -145,27 +224,76 @@ body {
   }
 }
 
+.menu-burger {
+  outline: none;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-burger:hover, .menu-burger:focus {
+  fill: var(--active-color);
+}
+
+@media screen and (max-width: 767px) {
+  .menu-burger {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    fill: var(--bold-text-color);
+    background-color: transparent;
+    z-index: 1000;
+  }
+  .menu-burger .icon-cross {
+    display: none;
+  }
+  .menu-burger.is-open .icon-cross {
+    display: block;
+    width: 19px;
+    height: 19px;
+  }
+  .menu-burger.is-open .icon-menu {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-burger {
+    display: none;
+  }
+}
+
 .menu__list {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  flex: 1 1 auto;
 }
 
 .menu__list li {
-  margin-right: 50px;
+  margin: 0 0 35px 0;
 }
 
 .menu__list li:last-child {
-  margin-right: 0px;
+  margin: 0px;
+}
+
+@media (min-width: 768px) {
+  .menu__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .menu__list li {
+    margin: 0 50px 0 0;
+  }
+  .menu__list li:last-child {
+    margin: 0px;
+  }
 }
 
 .menu__link {
-  position: relative;
-  display: block;
-  padding: 32px 0;
-  font-style: normal;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 40px;
+  line-height: 47px;
+  text-align: center;
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--bold-text-color);
@@ -180,15 +308,28 @@ body {
   color: var(--active-color);
 }
 
-.menu__link.active:after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 76px;
-  background: var(--active-color);
-  border-radius: 2px;
-  width: 100%;
-  height: 4px;
+@media (min-width: 768px) {
+  .menu__link.active:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 76px;
+    background: var(--active-color);
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+  }
+}
+
+@media (min-width: 768px) {
+  .menu__link {
+    position: relative;
+    display: block;
+    padding: 32px 0;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+  }
 }
 
 .header__contacts {
