--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -2,6 +2,7 @@ body{
     font-family: var(--main-font);
     color: var(--bold-text-color);
     position: relative;
+    overflow: hidden;
 }
 .wrapper{
 position: relative;
