--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,9 @@ body {
   font-family: var(--main-font);
   color: var(--bold-text-color);
   position: relative;
+}
+
+body.overflowed {
   overflow: hidden;
 }
 
@@ -226,11 +229,6 @@ body {
 
 .menu-burger {
   outline: none;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-burger:hover, .menu-burger:focus {
-  fill: var(--active-color);
 }
 
 @media screen and (max-width: 767px) {
@@ -245,6 +243,12 @@ body {
   }
   .menu-burger .icon-cross {
     display: none;
+  }
+  .menu-burger .icon-cross:hover, .menu-burger .icon-cross:focus {
+    fill: var(--active-color);
+  }
+  .menu-burger .icon-menu:hover, .menu-burger .icon-menu:focus {
+    fill: var(--active-color);
   }
   .menu-burger.is-open .icon-cross {
     display: block;
@@ -264,8 +268,13 @@ body {
 
 .menu__list {
   display: flex;
-  flex-direction: column;
-  flex: 1 1 auto;
+}
+
+@media (max-width: 768px) {
+  .menu__list {
+    flex-direction: column;
+    flex: 1 1 auto;
+  }
 }
 
 .menu__list li {
@@ -278,7 +287,6 @@ body {
 
 @media (min-width: 768px) {
   .menu__list {
-    display: flex;
     flex-wrap: wrap;
   }
   .menu__list li {
