--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -42,7 +42,6 @@
             top: 0%;
             display: flex;
             flex-direction: column;
-
         }
         }
     }
@@ -113,11 +112,6 @@
 
 .menu-burger {
   outline: none;
-  &:hover,
-  &:focus {
-    fill: var(--active-color);
-  }
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-burger {
@@ -131,9 +125,17 @@
     z-index: 1000;
     .icon-cross {
       display: none;
-
+    &:hover,
+    &:focus {
+        fill: var(--active-color);
     }
-
+    }
+    .icon-menu {
+    &:hover,
+    &:focus {
+        fill: var(--active-color);
+    }
+    }
     &.is-open .icon-cross {
       display: block;
       width: 19px;
@@ -152,8 +154,10 @@
 
 .menu__list {
         display: flex;
+@media (max-width:768px) {
         flex-direction: column;
         flex: 1 1 auto;
+}
 li{
     margin: 0 0 35px 0;
       &:last-child  {
@@ -161,7 +165,6 @@ li{
 }
 }
 @media (min-width:768px) {
-display: flex;
 flex-wrap: wrap;
 li  {
     margin:0 50px 0 0;
