--- a/css/main.css
+++ b/css/main.css
@@ -70,8 +70,22 @@ body.overflowed {
   margin: 0 auto;
 }
 
-.section {
-  padding: 94px 0;
+@media screen and (max-width: 480px) {
+  .section {
+    padding: 60px 0;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .section {
+    padding: 60px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding: 94px 0;
+  }
 }
 
 .logo {
@@ -300,7 +314,7 @@ body.overflowed {
 .menu__link {
   font-weight: 500;
   font-size: 40px;
-  line-height: 47px;
+  line-height: 1.14;
   text-align: center;
   letter-spacing: 0.02em;
   text-decoration: none;
@@ -402,24 +416,62 @@ body.overflowed {
 }
 
 .order {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/bg-1.jpg");
-  background-repeat: no-repeat;
   max-width: 1600px;
   text-align: center;
   padding: 200px 0;
   margin: 0 auto;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.6)), url("../img/hero/bg1x.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media screen and (min-resolution: 2dppx) {
+  .order {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.6)), url("../img/hero/bg2x.jpg");
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .order {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.6)), url("../img/hero/bgt1x.jpg");
+  }
+}
+
+@media screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .order {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.6)), url("../img/hero/bgt2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .order {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.6)), url("../img/hero/bgd1x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .order {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.6)), url("../img/hero/bgd2x.jpg");
+  }
 }
 
 .order__title {
-  font-style: normal;
   font-weight: 900;
-  font-size: 44px;
+  font-size: 26px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: white;
   margin-bottom: 30px;
+  color: #FFFFFF;
+}
+
+@media (min-width: 768px) {
+  .order__title {
+    font-size: 44px;
+  }
 }
 
 .order__button {
