--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -180,7 +180,7 @@ li  {
 .menu__link {
 font-weight: 500;
 font-size: 40px;
-line-height: 47px;
+line-height: 1.14;
 text-align: center;
 letter-spacing: 0.02em;
 text-decoration: none;
