--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -47,6 +47,7 @@
     }
 
    &__contacts {
+       margin-top: 30px;
        margin-bottom: 64px;
        li{
            margin: 0 0 30px 0;
@@ -81,13 +82,14 @@
     &__socials {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         li{
             display: inline-block;
             a{
                 text-decoration: none;
                 font-weight: 500;
                 font-size: 18px;
-                line-height: 22px;
+                line-height: 2;
                 letter-spacing: 0.02em;
                 color: var(--active-color);
             }
