--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -1,6 +1,9 @@
 .order {
     max-width: 1600px;
     text-align: center;
+    @media (max-width:768px) {
+    padding: 118px 0;
+    }
     padding: 200px 0;
     margin: 0 auto;
     background-image: linear-gradient(rgba(47, 48, 58, 0.6),rgba(47, 48, 58, 0.6)),url('../img/hero/bg1x.jpg');
