--- a/sass/components/_peculiarities.scss
+++ b/sass/components/_peculiarities.scss
@@ -1,15 +1,24 @@
 .peculiarities {
 }
 .peculiarities__list {
-    display: flex;
+    display: block;
+@media (min-width:768px) {
+display: flex;
+}
 
 }
 .peculiarities__item {
-    width: 270px;
-    margin-right: 30px;
-    &:last-child {
-    margin-right: 0px;
+margin: 0 0 30px 0;
+&:last-child{
+    margin: 0;
 }
+   @media (min-width:768px) {
+    width: 270px;
+    margin:0 30px 0 0;
+    &:last-child {
+    margin: 0px;
+}
+   }
 }
 
 .item-peculiarities {
@@ -24,6 +33,9 @@
     background-color: #F5F4FA;
 }
 .item-peculiarities__title {
+@media (max-width:768px) {
+text-align: center;
+}
 font-style: normal;
 font-weight: bold;
 font-size: 14px;
