--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -64,3 +64,8 @@ margin-bottom: 50px;
     pointer-events: none;
     transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) , opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) , visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
