--- a/css/main.css
+++ b/css/main.css
@@ -515,6 +515,8 @@ img {
 @media (min-width: 768px) {
   .peculiarities__list {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
@@ -527,6 +529,24 @@ img {
 }
 
 @media (min-width: 768px) {
+  .peculiarities__item {
+    width: 47.5%;
+  }
+  .peculiarities__item:nth-child(1) {
+    margin: 0 30px 30px 0;
+  }
+  .peculiarities__item:nth-child(2) {
+    margin: 0 0px 30px 0;
+  }
+  .peculiarities__item:nth-child(3) {
+    margin: 0 30px 0px 0;
+  }
+  .peculiarities__item:nth-child(4) {
+    margin: 0;
+  }
+}
+
+@media (min-width: 1200px) {
   .peculiarities__item {
     width: 270px;
     margin: 0 30px 0 0;
@@ -576,7 +596,7 @@ img {
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .occupation__section {
     display: block;
   }
@@ -623,19 +643,58 @@ img {
 }
 
 .team__cards {
-  display: flex;
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .team__cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 
 .card-team__item {
-  width: 270px;
-  margin-right: 30px;
+  width: 100%;
+  margin: 0 0 30px 0;
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
 .card-team__item:last-child {
-  margin-right: 0px;
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  .card-team__item {
+    width: 47.5%;
+  }
+  .card-team__item:nth-child(1) {
+    margin: 0 30px 30px 0;
+  }
+  .card-team__item:nth-child(2) {
+    margin: 0 0px 30px 0;
+  }
+  .card-team__item:nth-child(3) {
+    margin: 0 30px 0px 0;
+  }
+  .card-team__item:nth-child(4) {
+    margin: 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .card-team__item {
+    width: 270px;
+    margin: 0 30px 0 0;
+  }
+  .card-team__item:nth-child(n) {
+    margin: 0 30px 0 0;
+  }
+  .card-team__item:last-child {
+    margin: 0;
+  }
 }
 
 .card-team__content {
