--- a/sass/components/_peculiarities.scss
+++ b/sass/components/_peculiarities.scss
@@ -4,6 +4,8 @@
     display: block;
 @media (min-width:768px) {
 display: flex;
+flex-wrap: wrap;
+justify-content: center;
 }
 
 }
@@ -13,6 +15,21 @@ margin: 0 0 30px 0;
     margin: 0;
 }
    @media (min-width:768px) {
+    width: 47.5%;
+    &:nth-child(1){
+        margin: 0 30px 30px 0;
+    }
+    &:nth-child(2){
+        margin: 0 0px 30px 0;
+    }
+    &:nth-child(3){
+        margin: 0 30px 0px 0;
+    }
+    &:nth-child(4){
+        margin: 0;
+    }
+   }
+   @media (min-width:1200px) {
     width: 270px;
     margin:0 30px 0 0;
     &:last-child {
