--- a/css/main.css
+++ b/css/main.css
@@ -830,18 +830,53 @@ img {
 }
 
 .footer__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
+  display: block;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+  }
 }
 
 .footer__column {
-  margin-right: 70px;
-  text-align: left;
+  margin-bottom: 70px;
+  text-align: center;
 }
 
 .footer__column:last-child {
-  margin-right: 0px;
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .footer__column:nth-child(3) {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media (min-width: 1200px) {
+  .footer__column {
+    margin-right: 70px;
+    text-align: left;
+  }
+  .footer__column:last-child {
+    margin-right: 0px;
+  }
 }
 
 .footer__join {
@@ -857,6 +892,19 @@ img {
 
 .footer__icons {
   display: flex;
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .footer__icons {
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1200px) {
+  .footer__icons {
+    justify-content: stretch;
+  }
 }
 
 .footer__icons li {
@@ -925,6 +973,24 @@ img {
 }
 
 /*=======================Footer-form===========================*/
+@media (min-width: 768px) {
+  .form-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 450px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .form-footer {
+    display: block;
+    max-width: none;
+  }
+}
+
 .form-footer__title {
   font-weight: bold;
   font-size: 14px;
@@ -936,14 +1002,13 @@ img {
 }
 
 .form-footer__input {
+  display: block;
   padding: 12px 16px;
   font-size: 16px;
   line-height: 20px;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  width: 358px;
+  width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -952,20 +1017,53 @@ img {
   background-color: transparent;
 }
 
+@media (min-width: 1200px) {
+  .form-footer__input {
+    width: 358px;
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) {
+  .form-footer__input {
+    min-width: 450px;
+  }
+}
+
 .form-footer__form {
-  display: flex;
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+
+@media (min-width: 1200px) {
+  .form-footer__form {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .form-footer__button {
+  margin-top: 20px;
   cursor: pointer;
   background-color: var(--active-color);
   margin-left: 12px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   padding: 10px 29px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+
+@media (min-width: 1200px) {
+  .form-footer__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0px;
+  }
 }
 
 .form-footer__button span {
