--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -3,6 +3,9 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 50px;
+    @media (max-width:768px) {
+    flex-wrap: wrap;
+    }
 }
 .filter__item {
     margin-right: 8px;
